--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <p>Next, enclose the name of the category in square brackets followed by a | (pipe) character and a unique number for that place. The number is there in case you want to re-use the same place in multiple parts of the story or have multiple places of the same category.</p>
 
       <div class="codeblock">
-        We went out for a few drinks at <span class="code">[nightclub|1]</span> and somehow ened up naked and shivering in the waters of the <span class="code">[river|1]</span>
+        We went out for a few drinks at <span class="code">[nightclub|1]</span> and somehow ended up naked and shivering in the waters of the <span class="code">[river|1]</span>
       </div>
       <small>The locations will get swapped out by the location of that category nearest to the reader. The word "the" is stripped out if a place starts with it.</small>
       </p>
