--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="codeblock">
         We went out for a few drinks at <span class="code">[nightclub|1]</span> and somehow ended up naked and shivering in the waters of the <span class="code">[river|1]</span>
       </div>
-      <small>The locations will get swapped out by the location of that category nearest to the reader. The word "the" is stripped out if a place starts with it.</small>
+      <small>The locations will get swapped out by the location of that category nearest to the reader. The word "The" is stripped out if a place starts with it.</small>
       </p>
       <h4>Other information about places</h4>
       <p>You might want to use other information about a place, like the street it's on or how far away it is from the reader.</p>
