--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <section>
       <h1>Local Stories</h1>
-      <h2>A markup library for making dynamic stories relative to a reader's place, time, location and weather.</h2>
+      <h2>A markup library for creating dynamic stories relative to a reader's place, time, location and weather.</h2>
       <h3>Introduction</h3>
       <p>Local Stories is a tool created by <a href="http://filipnest.com">Filip Hn&#237;zdo</a> to localise text for its reader. It was created for making relative fiction that changes depending on where a reader is, what the weather is like and what time of day or year it is.</p>
       <p>It can hopefully be used for many other things.</p>
