--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
       <h3>Introduction</h3>
       <p>Local Stories is a tool created by <a href="https://twitter.com/FilipNest">Filip Hn&#237;zdo</a> to localise text for its reader. It was created for making relative fiction that changes depending on where a reader is, what the weather is like and what time of day or year it is.</p>
       <p>It can hopefully be used for many other things.</p>
-      <p>Here's how it works:</p>
+      <ul>
+      <li><a href="here/index.php">Go here to read some stories written using it to mark its launch.</a></li>
+      <li><a href="https://github.com/FilipNest/localstories">Go here to download the code and use it in your own projects, report bugs, make suggestions or contribute to its development.</a>.</li>
+      <li>Read on to find out how it works...</li>
+    
+        </ul>
+        
+      <h3>How it works</h3>
 
       <p>A writer writes a story and at certain points, replaces static words like days of the week and place names with special placeholders or <em>variables</em>.</p>
       <p>What kinds of variables can be used and how they work is covered in detail below. But first, here is an example of how a piece of text might look before it is converted for a reader:</p>
