--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <body>
     <section>
       <h1>Local Stories</h1>
-      <h2>A markup library for creating dynamic stories relative to a reader's place, time, location and weather.</h2>
+      <h2>A markup library for creating dynamic stories relative to a reader's place, time, location, weather and perhaps more*</h2>
       <h3>Introduction</h3>
       <p>Local Stories is a tool created by <a href="https://twitter.com/FilipNest">Filip Hn&#237;zdo</a> to localise text for its reader. It was created for making relative fiction that changes depending on where a reader is, what the weather is like and what time of day or year it is.</p>
-      <p>It can hopefully be used for many other things and is looking for writers to help work out how best to use it and how it can be improved. This could be you. It could be exciting.</p>
+      <p>It can hopefully be used for many other things and is looking for writers and developers to help work out how best to use it and how it can be improved. This could be you. It could be exciting.</p>
+      <small>*This first launch is focused on places (using the Foursquare API), times/dates, and weather (using the OpenWeatherMap API) but adding related music (via the Last.fm API), names of a reader's friends (via Facebook) and more could certainly be possible in the future. Any suggestions would be very welcome.</small>
       
       <nav class="landing">
-      <a href="here/index.php">Go here to read some stories a group of writers wrote to mark its launch and submit your own story.</a>
+      <a href="here/index.php">Go here to read some stories already written for the project and perhaps submit your own story.</a>
       <a href="https://github.com/FilipNest/localstories">Go here to download the code and use it in your own projects, report bugs, make suggestions or contribute to its development. The code is open source and free to use.</a>
       </nav>
       
