--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="https://github.com/FilipNest/localstories">Go here to download the code and use it in your own projects, report bugs, make suggestions or contribute to its development. The code is open source and free to use.</a>
       </nav>
       
-        Read on to find out how it works...
+        Read on to find out how it works and try out a demo with your own text...
         
       <h3>How it works</h3>
 
